--- a/gravitee-apim-console-webui/docker/Dockerfile
+++ b/gravitee-apim-console-webui/docker/Dockerfile
@@ -14,26 +14,11 @@
 # limitations under the License.
 #
 
-FROM nginx:1.23-alpine as base
-ENV CONFD_VERSION="0.16.0"
-ENV CONFD_URL="https://github.com/kelseyhightower/confd/releases/download"
-
-RUN wget -T 5 ${CONFD_URL}/v${CONFD_VERSION}/confd-${CONFD_VERSION}-linux-amd64 -O /bin/confd \
-      && chmod +x /bin/confd \
-      && ln -sf /dev/stdout /var/log/nginx/access.log \
-      && ln -sf /dev/stderr /var/log/nginx/error.log \
-      && sed -i '/user  nginx;/d' /etc/nginx/nginx.conf \
-      && sed -i 's,/var/run/nginx.pid,/tmp/nginx.pid,' /etc/nginx/nginx.conf \
-      && sed -i "/^http {/a \    proxy_temp_path /tmp/proxy_temp;\n    client_body_temp_path /tmp/client_temp;\n    fastcgi_temp_path /tmp/fastcgi_temp;\n    uwsgi_temp_path /tmp/uwsgi_temp;\n    scgi_temp_path /tmp/scgi_temp;\n" /etc/nginx/nginx.conf \
-      && chown -R 101:0 /usr/share/nginx /var/log/nginx /var/cache/nginx /etc/nginx /var/run \
-      && chmod -R g+w /var/cache/nginx \
-      && chmod -R g+w /etc/nginx
-
-FROM base
+FROM graviteeio/nginx:1.23
 LABEL maintainer="contact@graviteesource.com"
 
-COPY ./dist /usr/share/nginx/html/
 ADD config /etc/confd
-COPY run.sh /run.sh
+
+COPY ./dist /usr/share/nginx/html/
 
 CMD ["sh", "/run.sh"]
