--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -326,7 +326,7 @@ commands:
 parameters:
     gio_action:
         type: enum
-        enum: [release, package_bundle, nexus_staging, pull_requests, build_rpm_&_docker_images, changelog_apim]
+        enum: [release, package_bundle, nexus_staging, pull_requests, build_rpm_&_docker_images, release_notes_apim]
         default: pull_requests
     dry_run:
         type: boolean
@@ -1726,13 +1726,12 @@ jobs:
                     from: ./release/.tmp/<< pipeline.parameters.graviteeio_version >>/dist
                     to: "s3://gravitee-releases-downloads/graviteeio-apim"
 
-    changelog_apim:
-      docker:
-        - image: groovy:jdk11
-          user: root
-      resource_class: small
+    release_notes_apim:
+      executor:
+        name: node-lts
+        class: medium
       environment:
-        MILESTONE_VERSION: << pipeline.parameters.gio_milestone_version >>
+        VERSION: << pipeline.parameters.graviteeio_version >>
       steps:
         - checkout
         - keeper/env-export:
@@ -1750,30 +1749,18 @@ jobs:
         - run:
             name: Git config
             command: |
-              apt-get -y update
-              apt-get -y install git
               git config --global user.name "${GIT_USER_NAME}"
               git config --global user.email "${GIT_USER_EMAIL}"
         - gh/setup
         - run:
-            name: "Generate Changelog for Gravitee.io APIM"
-            command: groovy -DMILESTONE_VERSION="$MILESTONE_VERSION" .circleci/githubChangelogGenerator.groovy
+            name: Install dependencies
+            command: npm install
+            working_directory: "./release"
         - run:
-            name: "Commit Changelog and open a PR on the repository"
-            command: |
-              # Sanitize MILESTONE_VERSION
-              MILESTONE_VERSION_SANITIZED=$(echo ${MILESTONE_VERSION} | sed -e 's/[^a-zA-Z0-9]//g')
+            name: "Open a PR to create release notes into docs repository"
+            working_directory: "./release"
+            command: npm run zx -- ci-steps/doc-new-release-notes.mjs --version=${VERSION}
 
-              # Create a branch for the changelog PR
-              git checkout -b "changelog_apim_pr_${MILESTONE_VERSION_SANITIZED}"
-
-              # Commit the changelog
-              git add ./release/changelog/CHANGELOG*.adoc
-              git commit -m "Generate changelog for version ${MILESTONE_VERSION}"
-
-              # Push the branch and open a PR
-              git push --set-upstream origin "changelog_apim_pr_${MILESTONE_VERSION_SANITIZED}"
-              gh pr create --title "Changelog for ${MILESTONE_VERSION}" --body "Generate changelog for version ${MILESTONE_VERSION}" --reviewer "@gravitee-io/apim"
 workflows:
     pull_requests:
         when:
@@ -2177,9 +2164,9 @@ workflows:
                       parameters:
                           version: ["3", "4", "5"]
 
-    changelog_apim:
+    release_notes_apim:
       when:
-        equal: [ changelog_apim, << pipeline.parameters.gio_action >> ]
+        equal: [ release_notes_apim, << pipeline.parameters.gio_action >> ]
       jobs:
-        - changelog_apim:
+        - release_notes_apim:
             context: cicd-orchestrator
