--- a/release/package.json
+++ b/release/package.json
@@ -15,7 +15,7 @@
     "release": "zx steps/1-release.mjs",
     "package_zip": "zx steps/2-package_zip.mjs",
     "docker_rpms": "zx steps/3-docker_and_rpms.mjs",
-    "changelog": "zx steps/4-generate_changelog.mjs",
+    "release_notes": "zx steps/4-generate_release_notes.mjs",
     "nexus_sync": "zx steps/5-nexus_sync.mjs",
     "zx": "zx"
   },
