test(perf): update configuration of k6, prometheus and grafana dashboard - prometheus: lower scrape_interval and evaluation_interval to 1s (and add a comment in provisioning-datasources.yaml) - k6 command: add prometheus rw trend options to export p99 p95 p90 and avg data - grafana: create a k6_rate_interval used by k6 oriented widget, fix the widgets when needed - aggregate some metrics to avoid a line per response status - improve failure panel

--- a/gravitee-apim-perf/grafana/config/provisioning-datasources.yaml
+++ b/gravitee-apim-perf/grafana/config/provisioning-datasources.yaml
@@ -13,7 +13,7 @@ datasources:
     uid: 'PBFA97CFB590B2093'
     jsonData:
       httpMethod: POST
-      timeInterval: '1s'
+      timeInterval: '1s' # Should be the same as configured in prometheus.yml#global.scrape_interval
   - name: 'Tempo'
     type: tempo
     access: proxy
