--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -314,7 +314,7 @@ commands:
 parameters:
     gio_action:
         type: enum
-        enum: [release, package_bundle, nexus_staging, pull_requests, build_rpm_&_docker_images, release_notes_apim]
+        enum: [release, package_bundle, nexus_staging, pull_requests, build_rpm_&_docker_images, release_notes_apim, bridge_e2e]
         default: pull_requests
     dry_run:
         type: boolean
@@ -1433,6 +1433,9 @@ jobs:
                 type: string
             database:
                 type: string
+            apim_client_tag:
+                type: string
+                default: ""
         steps:
             - checkout
             - attach_workspace:
@@ -1449,7 +1452,12 @@ jobs:
                         echo "Enabling jupiter mode on APIM Gateway and Rest API"
                         export JUPITER_MODE_ENABLED=true
                       fi
-                      APIM_REGISTRY=graviteeio.azurecr.io APIM_TAG=$TAG npm run test:api:<< parameters.database >>
+                      if [ -z "<< parameters.apim_client_tag >>" ]
+                      then
+                        APIM_REGISTRY=graviteeio.azurecr.io APIM_TAG=$TAG APIM_CLIENT_TAG=$TAG npm run test:api:<< parameters.database >>
+                      else 
+                        APIM_REGISTRY=graviteeio.azurecr.io APIM_TAG=$TAG APIM_CLIENT_TAG=<< parameters.apim_client_tag >> npm run test:api:<< parameters.database >>
+                      fi
             - docker-azure-logout
             - when:
                   condition:
@@ -1470,6 +1478,7 @@ jobs:
             - notify-on-failure
             - store_test_results:
                   path: ~/test-results
+
     e2e-cypress:
         executor:
             name: ubuntu
@@ -1813,7 +1822,7 @@ workflows:
                   matrix:
                       parameters:
                           execution_mode: ["v3", "jupiter"]
-                          database: ["mongo", "jdbc"]
+                          database: ["mongo", "jdbc", "bridge"]
                   filters:
                       branches:
                           only:
@@ -1998,3 +2007,33 @@ workflows:
         jobs:
             - release_notes_apim:
                   context: cicd-orchestrator
+
+    bridge_e2e:
+      when:
+        equal: [ bridge_e2e, << pipeline.parameters.gio_action >> ]
+      jobs:
+        - setup:
+            context: cicd-orchestrator
+        - validate:
+            context: cicd-orchestrator
+            requires:
+              - setup
+        - build:
+            context: cicd-orchestrator
+            requires:
+              - validate
+        - e2e-lint-build:
+            name: Lint & Build APIM e2e
+            context: cicd-orchestrator
+            requires:
+              - build
+        - e2e-test:
+            context: cicd-orchestrator
+            name: E2E - << matrix.execution_mode >> - << matrix.apim_client_tag >>
+            requires:
+              - Lint & Build APIM e2e
+            matrix:
+              parameters:
+                execution_mode: ["v3", "jupiter"]
+                database: ["bridge"]
+                apim_client_tag: ["3.18.x-latest"]
