--- a/gravitee-apim-console-webui/package.json
+++ b/gravitee-apim-console-webui/package.json
@@ -15,11 +15,13 @@
     "@angular/upgrade": "13.3.12",
     "@asyncapi/web-component": "1.0.0-next.15",
     "@fontsource/libre-franklin": "4.4.5",
-    "@gravitee/ui-analytics": "5.2.0",
+    "@gravitee/ui-analytics": "5.4.0",
     "@gravitee/ui-components": "3.38.4",
-    "@gravitee/ui-particles-angular": "5.3.0",
-    "@gravitee/ui-policy-studio-angular": "5.2.0",
+    "@gravitee/ui-particles-angular": "5.4.0",
+    "@gravitee/ui-policy-studio-angular": "5.4.0",
     "@highcharts/map-collection": "1.1.4",
+    "@ngx-formly/core": "6.1.1",
+    "@ngx-formly/material": "6.1.1",
     "@toast-ui/editor": "2.5.4",
     "@toast-ui/editor-plugin-code-syntax-highlight": "1.0.0",
     "@uirouter/angular": "9.1.0",
