fix: sanitize firstname and lastname of NewExternalUserEntity
Just escaping them isn't great because it leads to issue with accents.

https://gravitee.atlassian.net/browse/APIM-650

--- a/gravitee-apim-rest-api/gravitee-apim-rest-api-model/pom.xml
+++ b/gravitee-apim-rest-api/gravitee-apim-rest-api-model/pom.xml
@@ -79,6 +79,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
+			<artifactId>owasp-java-html-sanitizer</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.glassfish.jersey.ext</groupId>
 			<artifactId>jersey-bean-validation</artifactId>
 			<scope>test</scope>
