--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,9 @@
         <json-path.version>2.6.0</json-path.version>
         <json-smart.version>2.4.7</json-smart.version>
         <jsoup.version>1.15.3</jsoup.version>
+        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <lucene.version>7.7.3</lucene.version>
+        <mapstruct.version>1.5.3.Final</mapstruct.version>
         <!-- mockito version to remove when https://github.com/gravitee-io/issues/issues/8257 will be completed -->
         <mockito-inline.version>3.11.2</mockito-inline.version>
         <!-- -->
@@ -793,6 +795,25 @@
                 <groupId>kr.motd.maven</groupId>
                 <artifactId>os-maven-plugin</artifactId>
                 <version>${os-maven-plugin.version}</version>
+            </dependency>
+
+            <!--		Mapstruct + Lombok -->
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct</artifactId>
+                <version>${mapstruct.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct-processor</artifactId>
+                <version>${mapstruct.version}</version>
+                <scope>provided</scope>
+                <optional>true</optional>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok-mapstruct-binding</artifactId>
+                <version>${lombok-mapstruct-binding.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
