--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1067,7 +1067,7 @@ jobs:
                       kubectl rollout restart deployment/${K8S_NAMESPACE}-portal -n ${K8S_NAMESPACE}
                       kubectl rollout restart deployment/${K8S_NAMESPACE}-ui -n ${K8S_NAMESPACE}
                       kubectl rollout restart deployment/${K8S_NAMESPACE}-gateway -n ${K8S_NAMESPACE}
-                      kubectl rollout restart deployment/${K8S_NAMESPACE}-v3-gateway -n ${K8S_NAMESPACE}
+                      kubectl rollout restart deployment/${K8S_NAMESPACE}-apim-v3-gateway -n ${K8S_NAMESPACE}
             - keeper/env-export:
                   secret-url: keeper://G4hBnFUDBYb9Sw3TxhvjHg/custom_field/token
                   var-name: CIRCLE_TOKEN
